# tar-rag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_PYPI.md  benchmark.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark.md
docs/test_corpus/: acknowledgement.md
examples/: corpus_README.md  how-to-guide.md  integration_openai.md  integration_other.md  quickstart_openai.py  upload_openai.py
examples/corpus/guides/setup/: first_run.md  installation.md
examples/corpus/guides/troubleshooting/: common_errors.md
examples/corpus/reference/api/: crawl.md  search.md
examples/corpus/reference/glossary/: terms.md
pypi/: README_PYPI.md
tar_rag/: __init__.py  artifacts.py  cache.py  cli.py  confidence.py  context_resolver.py  corpus_map.py  crawler.py  errors.py  facade.py  manifest.py  models.py  retrieval.py  search_plan.py
tar_rag/adapters/: __init__.py  base.py  chroma_adapter.py  in_memory_adapter.py  openai_adapter.py  pinecone_adapter.py  qdrant_adapter.py
tar_rag/extractors/: __init__.py  base.py  docx.py  html.py  pdf.py  plaintext.py  registry.py  structured.py
tar_rag_output_corpora/: confidence_config.json  search_plan_template.json
tests/: conftest.py
tests/benchmarks/: bench_harness.py  bench_queries.py  bench_report.py  test_benchmark.py
tests/integration/: test_retrieval_in_memory.py  test_retrieval_openai.py
tests/unit/: test_adapter_filters.py  test_cache.py  test_confidence.py  test_context_resolver.py  test_corpus_map.py  test_crawler.py  test_extractors.py  test_manifest.py  test_search_plan.py
