[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tar-rag"
version = "0.1.0"
description = "Topology-Aware Retrieval for RAG — structure-guided vector search with progressive fallback"
readme = "README_PYPI.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Vamsi Karnam" }
]
keywords = [
    "rag",
    "retrieval",
    "vector-search",
    "llm",
    "topology",
    "knowledge-base",
    "structured-retrieval",
    "semantic-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Zero mandatory runtime dependencies.
dependencies = []

[project.optional-dependencies]
# Vector store adapters
openai   = ["openai>=1.0.0"]
pinecone = ["pinecone-client>=3.0.0"]
qdrant   = ["qdrant-client>=1.7.0"]
chroma   = ["chromadb>=0.4.0"]

# File extractors (beyond stdlib plaintext / json / csv / html)
pdf      = ["pypdf>=5.4.0"]
docx     = ["python-docx>=1.0.0"]

# Bundle every adapter + extractor
all = [
    "openai>=1.0.0",
    "pinecone-client>=3.0.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "pypdf>=5.4.0",
    "python-docx>=1.0.0",
]

# Development / test environment
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage   = "https://github.com/vamsi-karnam/tar-rag"
Repository = "https://github.com/vamsi-karnam/tar-rag"
Issues     = "https://github.com/vamsi-karnam/tar-rag/issues"

[project.scripts]
tar-rag = "tar_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tar_rag"]

[tool.hatch.build.targets.sdist]
include = [
    "tar_rag",
    "tests",
    "examples",
    "README.md",
    "README_PYPI.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "IMPLEMENTATION_PLAN.md",
    # docs/test_corpus/ is a local-only reduction of CPython used for
    # the live benchmark — not redistributable via PyPI.
    "docs/**",
    # Local outputs from running tar-rag during development.
    "tar_rag_output/**",
    # Local builds.
    "dist/**",
    ".pytest_cache/**",
    "**/.pytest_cache/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "RUF022", # `__all__` is intentionally grouped by semantic category, not alphabetised
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests requiring live API credentials (deselect with -m 'not live')",
    "benchmark: marks benchmark comparison tests",
]
