[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tar-rag"
version = "0.2.0"
description = "Topology-Aware Retrieval for RAG — structure-guided vector search with progressive fallback"
readme = "pypi/README_PYPI.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Vamsi Karnam" }
]
keywords = [
    "rag",
    "retrieval",
    "vector-search",
    "llm",
    "topology",
    "knowledge-base",
    "structured-retrieval",
    "semantic-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Turnkey install — every bundled adapter and extractor is pulled in by
# default so `pip install tar-rag` works out of the box. Heavyweight or
# environment-specific integrations (GPU stacks, enterprise connectors)
# should be added under [project.optional-dependencies] as they appear.
dependencies = [
    "openai>=1.0.0",
    "pinecone-client>=3.0.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "pypdf>=5.4.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
# Kept as no-op aliases so existing install instructions
# (`pip install "tar-rag[openai]"`, `[all]`, etc.) keep working.
openai   = []
pinecone = []
qdrant   = []
chroma   = []
pdf      = []
docx     = []
all      = []

# Development / test environment
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage   = "https://github.com/vamsi-karnam/tar-rag"
Repository = "https://github.com/vamsi-karnam/tar-rag"
Issues     = "https://github.com/vamsi-karnam/tar-rag/issues"

[project.scripts]
tar-rag = "tar_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tar_rag"]

[tool.hatch.build.targets.sdist]
include = [
    "tar_rag",
    "tests",
    "examples",
    "pypi/README_PYPI.md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "IMPLEMENTATION_PLAN.md",
    # benchmarks/ contains live benchmark docs and gitignored local
    # corpora (CPython reduction, code-corpora-master). The corpora
    # are derivative of upstream sources and are not redistributable;
    # benchmark.md itself is accessible via the GitHub repo.
    "benchmarks/**",
    # Legacy path from before v0.2.0 — kept here as a safety net in
    # case any branch still has files under docs/.
    "docs/**",
    # Local outputs from running tar-rag during development.
    "tar_rag_output/**",
    "tar_rag_output_corpora/**",
    # Local builds.
    "dist/**",
    ".pytest_cache/**",
    "**/.pytest_cache/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "RUF022", # `__all__` is intentionally grouped by semantic category, not alphabetised
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests requiring live API credentials (deselect with -m 'not live')",
    "benchmark: marks benchmark comparison tests",
]
